# brutalist-report-analyzer

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  constants.ts
src-tauri/: Cargo.toml  brutalist_report.py  tauri.conf.json
src-tauri/src/: main.rs
src/components/: JobStatus.tsx  ResultsView.tsx  TopicGroupCard.tsx  TopicSelector.tsx  WordCloud.tsx
src/components/ui/: Button.tsx  Modal.tsx
src/hooks/: useAnalysis.ts
src/types/: analysis.ts
