[package]
name = "brutalist-report-analyzer"
version = "0.1.0"
description = "Brutalist Report News Analyzer"
authors = [""]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "shell-sidecar", "shell-execute", "shell-open", "dialog-save", "dialog-open", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-remove-dir", "fs-remove-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
